--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
@@ -12,7 +13,7 @@
     "react-scripts": "^3.3.0"
   },
   "scripts": {
-    "start": "cd backend && npm install && node index.js",
+    "start": "cd backend && npm install && node server.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
