--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "cd backend && npm install && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
