--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "cd backend && npm install && node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
